Fix header flicker

--- a/src/app/admin/headerpanel/headerpanel.component.scss
+++ b/src/app/admin/headerpanel/headerpanel.component.scss
@@ -16,14 +16,17 @@ $linkcolour: var(--color-secondary);
   justify-content: space-between;
   padding-left: 1rem;
   padding-right: 1rem;
-
+  height: 100%;
 }
 
 .usercollapse {
   padding-top: 0.5rem;
+  position: absolute;
+  right: 5px;
 }
 
 .homebtn {
+  position: absolute;
   margin-bottom: 1rem;
   a[href] {
     color: var(--color-primary-dark);
@@ -32,7 +35,8 @@ $linkcolour: var(--color-secondary);
 
 .usernav {
   display: flex;
-  width: 80%;
+  width: 100%;
+  height: 100%;
   a[href] {
     color: var(--color-secondary);
   }
@@ -45,7 +49,7 @@ $linkcolour: var(--color-secondary);
 }
 
 .side-item {
-  margin: 0 2rem 1.2rem 2rem;
+  margin: 0 2rem 0rem 2rem;
   font-size: large;
 }
 
@@ -71,7 +75,6 @@ button:focus {outline:0;}
   width: 100%;
   text-align: left;
   outline: none;
-  margin-right: 20px;
 }
 
 .userbtn:hover {
@@ -129,7 +132,7 @@ button:focus {outline:0;}
 }
 
 
-@media only screen and (max-width: 576px) {
+@media only screen and (max-width: 767px) {
   .headerpanel {
     display: none;
   }
